--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -2,4 +2,131 @@
 \addcontentsline{toc}{chapter}{BIBLIOGRAPHY}
 
 \bibliographystyle{unsrt}
-\bibliography{bibtex_entries}
+%\bibliography{bibtex_entries}
+\begin{thebibliography}{9}
+	 	\bibitem{faa} Federal Aviation Administration \\ website: https://www.faasafety.gov/files/gslac/library\\/documents/2012/Nov/71574/DirtyDozenWeb3.pdf,\\
+	 	retrieved 10/5/2016.
+	 	\bibitem{boeing} Rankin, William. ``MEDA Investigation Process", Aero Quarterly.\\ Website: Boeing.com/commercial/aeromagazine/articles/qtr\_2\_07/aero\_q207\_article3.pdf,
+	 	retrieved 10/5/2016
+	 	\bibitem{faaHF} Aviation Maintenance Technician Handbook. Chapter 14, ``Addendum/Human Factors". 
+	 	\bibitem{DEL} van Ditmarsch, H.; van der Hoek, W.; Kooi, B. Dynamic Epistemic Logic. Springer. Dordrecht, The Netherlands, 2008. 
+	 	\bibitem{AhrenbachGoodloe}
+	 	Ahrenbach, S.; Goodloe, A. Formal Analysis of Pilot Error Using Agent Safety Logic. {\em Innovations in Systems and Software Engineering}. {\bf Submitted}.
+	 	
+	 	\bibitem{bolton2013using}
+	 	Bolton, M.; Bass, E.; Siminiceanu, R. Using formal verification to evaluate human-automation interaction: A review. \emph{Systems, Man, and Cybernetics: Systems, IEEE Transactions on} (Vol 43, No. 5, pp.488-503). 2013. IEEE.
+	 	
+	 	\bibitem{bolton2013formally}
+	 	Bolton, M.; Bass, E. Formally verifying human--automation interaction as part of a system model: limitations and tradeoffs. \emph{Innovations in systems and software engineering} (Vol 6, No. 3, pp.419-231). 2010. Springer-Verlag.
+	 	
+	 	\bibitem{bolton2011systematic}
+	 	Bolton, M.; Bass, E.; Siminiceanu, R. A systematic approach to model checking human--automation interaction using task-analytic models. \emph{Systems, Man, and Cybernetics: Systems and Humans, IEEE Transactions on} (Vol 41, No. 5, pp.961-976). 2011. IEEE.
+	 	
+	 	\bibitem{coq_ref}
+	 	Barras, B.; Boutin, S.; Cornes, C.; Courant, J.; Filliatre, J.C.; Gimenez, E.; Herbelin, H.; Huet, G.; Munoz, C.; Murthy, C. and Parent, C. The Coq proof assistant reference manual: Version 6.1 (Doctoral dissertation, Inria). 1997.
+	 	
+	 	
+	 	\bibitem{modal} Blackburn, P.; de Rijke, M.; Venema, Y. Modal Logic. Cambridge University Press. New York, 2001.
+	 	\bibitem{PAL} Baltag, A.; Moss, L.; Solecki, S. "The logic of public announcements, common knowledge, and private suspicions." Readings in Formal Epistemology. Springer International Publishing, 2016. 773-812.
+	 	\bibitem{RAK} Fagin, R.; Halpern J.; Moses, Y.; Vardi, M. Reasoning about knowledge. MIT press, 2004.
+	 	\bibitem{MHE} Basin, D., Radomirovic, S. and Schmid, L., Modeling Human Errors in Security Protocols.
+	 	\bibitem{ButlerModeConfusion} Butler, R.W., Miller, S.P., Potts, J.N. and Carreno, V.A., 1998. A formal methods approach to the analysis of mode confusion. In Digital Avionics Systems Conference, 1998. Proceedings., 17th DASC. The AIAA/IEEE/SAE (Vol. 1, pp. C41-1). IEEE.
+	 	
+	 	\bibitem{johnson_butler_fm}
+	 	Butler, R.; Johnson, S. Formal Methods For Life-Critical Software. \emph{Computing in Aerospace 9 Conference}, (pp. 319-329), San Diego, CA. October 1993.
+	 	
+	 	\bibitem{davisputnam}
+	 	Davis, M.; Putnam, H. "A Computing Procedure for Quantification Theory". J.ACM. 7 (3): 201–215. (1960).
+	 	
+	 	\bibitem{RushbyFMbook} Rushby, J., 1993. Formal methods and the certification of critical systems. SRI International. Computer Science Laboratory.
+	 	\bibitem{DELcomplex} Aucher, G. and Schwarzentruber, F., 2013. On the complexity of dynamic epistemic logic. arXiv preprint arXiv:1310.6406.
+	 	% Reference 1
+	 	
+	 	%	\bibitem{ref-journal}
+	 	%		Lastname, F.; Author, T. The title of the cited article. {\em Journal Abbreviation} {\bf 2008}, {\em 10}, 142-149.
+	 	% Reference 2
+	 	%		\bibitem{ref-book}
+	 	%	Lastname, F.F.; Author, T. The title of the cited contribution. In {\em The Book Title}; Editor, F., Meditor, A., Eds.; Publishing House: City, Country, 2007; pp. 32-58.
+	 	
+	 	
+	 	\bibitem{airfrance}
+	 	et d'Analyses, Bureau dEnqutes. ``Final report on the accident on 1st June 2009 to the Airbus A330-203 registered F-GZCP operated by Air France flight AF 447 Rio de Janeiro–Paris." Paris: BEA (2012).
+	 	
+	 	
+	 	\bibitem{VB_TowardPlay}
+	 	van Benthem, J.; Pacuit, E; Roy, O. Toward a Theory of Play: A Logical Perspective on Games and Interaction. {\em GAMES} {\bf 2011}, {\em 2}, 52-86.
+	 	
+	 	\bibitem{Rushby_Mode_Confusion}
+	 	Rushby, J. Using model checking to help discover mode confusions and other automation surprises. {\em Reliability Engineering and System Safety} {\bf 2002}, {\em 75}, 167-177.
+	 	
+	 	\bibitem{Rushby_AssuranceCases}
+	 	Rushby, J. On the Interpretation of Assurance Case Arguments. {\em Proceedings of the Second International Workshop on Argument for Agreement and Assurance (AAA 2015)}. Springer LNCS.
+	 	
+	 	\bibitem{Rushby_TSIS}
+	 	Rushby, J. Trustworthy Self-Integrating Systems. {\em Springer LNCS}, {\bf 2016}, {\em 9581}, 19-29.
+	 	
+	 	\bibitem{GelmanFeighRushby}
+	 	Gelman, G.; Feigh, K.; Rushby, J. Example of a Complementary use of Model Checking and Agent-based Simulation. {\em IEEE Int'l Conf. on Systems, Man, and Cybernetics} {\bf 2013}, 900-905.
+	 	
+	 	
+	 	
+	 	\bibitem{BMS}
+	 	Baltag, A.; Moss, L.; Solecki, S. The Logic of Public Announcements, Common Knowledge, and Private Suspicions. {\em TARK '98}, {\bf 1998}, 43-56.
+	 	
+	 	\bibitem{ShohamLeytonBrown}
+	 	Shoham, Y.; Leyton-Brown, K. {\em Multiagent Systems: Algorithmic, Game Theoretic and Logical Foundation}. Cambridge University Press: New York, USA, 2008.
+	 	
+	 	\bibitem{DELassignment}
+	 	van Ditmarsch, H.P.; van der Hoek, W.; Kooi, B.P. Dynamic Epistemic Logic with Assignment. {\em Proceedings of the fourth internal joint conference on Autonomous agents and multiagent systems}, {\bf 2005}, 141-148.
+	 	% Reference 2
+	 	\bibitem{VB_LDII}
+	 	van Benthem, J. {\em Logical Dynamics of Information and Interaction}. Cambridge University Press: New York, USA, 2011.
+	 	\bibitem{ditmarsch}
+	 	Van Ditmarsch, H. "Knowledge games." Bulletin of Economic Research 53.4 (2001): 249-273.
+	 	\bibitem{FHMV}
+	 	Fagin, R.; Halpern J.; Moses, Y.; Vardi, M. {\em Reasoning About Knowledge}. The MIT Press: Cambridge, USA, 2003.
+	 	\bibitem{DynLog}
+	 	Harel, D.; Kozen, D. and Jerzy Tiuryn. Dynamic logic. MIT press, 2000.
+	 	
+	 	\bibitem{Hintikka}
+	 	Hintikka, J. {\em Knowledge and Belief}. Cornell University Press. Ithaca, USA, 1962.
+	 	
+	 	\bibitem{Barwise_Seligman}
+	 	Barwise, J.; Seligman, J. {\em Information Flow: The Logic of Distributed Systems}. Cambridge University Press: New York, USA, 1997.
+	 	
+	 	\bibitem{DEL}
+	 	van Ditmarsch, H.; van der Hoek, W.; Kooi, B. {\em Dynamic Epistemic Logic}. Springer: Dordrecht, The Netherlands, 2008.
+	 	
+	 	\bibitem{RushbyMC} Bass, E.; Feigh K.; Gunter, E.; Rushby, J. Formal Modeling and Analysis for Interactive Hybrid Systems. Proceedings of the Fourth International Workshop on Formal Methods for Interactive Systems (FMIS 2011). Electronic Communications of the EASST. Vol 45 (2011).
+	 	
+	 	\bibitem{Rushby_FormalismSafetyCases}
+	 	Rushby, J. Formalism in Safety Cases. In {\em Making Systems Safer: Proceedings of the 18th Safety-Critical Systems Symposium}; Dale, C.; Anderson, T.; Eds. Bristol UK, 2010, 3-17.
+	 	\bibitem{fuzzy}
+	 	Klir, G.; Yuan, B. Fuzzy sets and fuzzy logic. Vol. 4. New Jersey: Prentice hall, 1995.
+	 	\bibitem{lescanne}
+	 	Lescanne, P. "Mechanizing common knowledge logic using COQ." Annals of Mathematics and Artificial Intelligence 48.1-2 (2006): 15-43.
+	 	APA	
+	 	
+ 		\bibitem{z3} De Moura, L.; Bj{\o}rner, N. Z3: An efficient SMT solver. \emph{Tools and Algorithms for the Construction and Analysis of Systems}. 2008. Springer.
+	 	
+	 	\bibitem{delcoq1}
+	 	Malikovi\'c, M.; \v Cubrilo, M. "Modeling epistemic actions in dynamic epistemic logic using Coq." CECIIS-2010. 2010.
+	 	
+	 	\bibitem{delcoq2}
+	 	Malikovi\'c, M.; \v Cubrilo, M. "Reasoning about Epistemic Actions and Knowledge in Multi-agent Systems using Coq." Computer Technology and Application 2.8 (2011): 616-627.
+	 	\bibitem{asiana}
+	 	National Transportation Safety Board. ``Descent below visual glidepath and impact with Seawall Asiana Flight 214, Boeing 777-200ER, HL 7742, San Francisco, California, July 6, 2013 (Aircraft Accident Report NTSB/AAR-14/01)." Washington, DC Author: NTSB (2014).
+	 	\bibitem{AFPalmer}
+	 	Palmer, Bill. Understanding Air France 447. William Palmer, 2013.
+	 	
+	 	\bibitem{puislescanne}
+	 	Lescanne, P.; Puiss\'egur, J. "Dynamic logic of common knowledge in a proof assistant." arXiv preprint arXiv:0712.3146 (2007).
+	 	\bibitem{Aumann}
+	 	Aumann, R. "Interactive epistemology I: knowledge." International Journal of Game Theory 28.3 (1999): 263-300.
+	 	
+	 	\bibitem{hwang}
+	 	Hwang, M.; Lin, J. ``Information dimension, information overload and decision quality." Journal of Informatin Science 25 (1999): 213-218.
+	 	
+	 	\bibitem{simpson}
+	 	Simpson, C.; Prusak, L. ``Troubles with Information Overload = Moving from Quantity to Quality in Information Provision." International Journal of Information Management 15 (1995): 413-425.
+\end{thebibliography}
