--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -1,8 +1,8 @@
 \thispagestyle{empty}
 
 \vspace*{\fill}
-\centerline{\large{\bf THE TITLE OF YOUR}} % The title on the Title Page must be in all caps.
-\centerline{\large{\bf PROJECT GOES HERE}}
+\centerline{\large{\bf FORMAL METHODS WITH}} % The title on the Title Page must be in all caps.
+\centerline{\large{\bf DYNAMIC AGENT SAFETY LOGIC}}
 \vskip 10mm
 \centerline{\rule{150mm}{0.2mm}} % You can adjust the length of the horizontal line here.
 \vskip 10mm
@@ -19,7 +19,7 @@
 \centerline{\rule{150mm}{0.2mm}}
 \vskip 10mm
 \centerline{by}
-\centerline{YOUR NAME} % Your name on the Title Page must be in all caps.
-\centerline{Dr. Advisor Name, Thesis Supervisor} % Edit advisor and choose Thesis or Dissertation
+\centerline{Seth Ahrenbach} % Your name on the Title Page must be in all caps.
+\centerline{Dr. Rohit Chadha, Thesis Supervisor} % Edit advisor and choose Thesis or Dissertation
 \centerline{MAY 2005} % The month is required to be capitalized.  Use the month and year of your graduation, not the month and year you defend.
 \vspace*{\fill}
